@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -20,34 +20,27 @@
  * or visit www.oracle.com if you need additional information or have any
  * questions.
  */
+package jdk.jfr.jcmd;
 
 /**
  * @test
- * @bug 8284199
- * @summary Test StructuredTaskScope without --enable-preview
- * @modules jdk.incubator.concurrent
- * @run junit/othervm PreviewFeaturesNotEnabled
+ * @summary The test verifies that options can only be specified once with jcmd JFR
+ * @key jfr
+ * @requires vm.hasJFR
+ * @library /test/lib /test/jdk
+ * @modules jdk.jfr/jdk.jfr.internal.dcmd
+ * @run main/othervm jdk.jfr.jcmd.TestJcmdOptionSpecifiedOnce
  */
+public class TestJcmdOptionSpecifiedOnce {
 
-import jdk.incubator.concurrent.StructuredTaskScope;
-import org.junit.jupiter.api.Test;
-import static org.junit.jupiter.api.Assertions.*;
+    public static void main(String[] args) throws Exception {
 
-class PreviewFeaturesNotEnabled {
-    /**
-     * One-arg constructor needs --enable-preview.
-     */
-    @Test
-    void testUnsupportedOperationException() {
-        assertThrows(UnsupportedOperationException.class, StructuredTaskScope::new);
+        testJCmdConflict();
     }
 
-    /**
-     * Two-arg constructor does not need --enable-preview.
-     */
-    @Test
-    void testNoUnsupportedOperationException() {
-        try (var scope = new StructuredTaskScope<Object>(null, Thread::new)) {
-        }
+    private static void testJCmdConflict() {
+        var output= JcmdHelper.jcmd("JFR.start name=hello name=greetings");
+        output.shouldContain("name can only be specified once");
     }
 }
+
